fix alignment issue on form

--- a/assets/css/pages/faq.css
+++ b/assets/css/pages/faq.css
@@ -134,7 +134,7 @@ body {
   padding: var(--large-spacing);
   display: grid;
   grid-template-columns: 1fr 1fr;
-  align-items: center;
+  align-items: flex-start;
   position: relative;
 }
 
